--- a/app/src/main/res/layout/food_list.xml
+++ b/app/src/main/res/layout/food_list.xml
@@ -6,13 +6,15 @@
     <ListView
         android:id="@+id/list"
         android:layout_width="wrap_content"
-        android:layout_height="455dp">
+        android:layout_height="wrap_content">
     </ListView>
 
     <Button
         android:id="@+id/button"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="NewEntryButton" />
+        android:layout_gravity="center"
+        android:text="new diary entry"
+        android:onClick="setNewEntryButtonClicked"/>
 
 </LinearLayout>
