Add ViewFoodItemActivity to view individual diary entries

--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -34,7 +34,8 @@
             android:id="@+id/meal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="22sp" />
+            android:textSize="22sp"
+            android:onClick="onFoodItemClicked"/>/>
 
         <TextView
             android:id="@+id/food"
