Add more month options and add date to ViewFoodItem

--- a/app/src/main/res/layout/food_list.xml
+++ b/app/src/main/res/layout/food_list.xml
@@ -16,6 +16,22 @@
             android:onClick="setAllButtonClicked"/>
 
         <Button
+            android:id="@+id/january_button"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="JANUARY"
+            android:onClick="setJanuaryButtonClicked"/>
+
+        <Button
+            android:id="@+id/february_button"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="FEBRUARY"
+            android:onClick="setFebruaryButtonClicked"/>
+
+        <Button
             android:id="@+id/march_button"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
