--- a/app/src/main/res/layout/view_food_item.xml
+++ b/app/src/main/res/layout/view_food_item.xml
@@ -4,6 +4,20 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/item_day"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="32sp"/>
+
+    <TextView
+        android:id="@+id/item_month"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="20sp"/>
+
+    <TextView
         android:id="@+id/item_meal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
