--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -26,7 +26,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="400dp"
+        android:layout_width="440dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -46,17 +46,17 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="100dp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <Button
             android:id="@+id/delete_button"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:onClick="setDeleteButtonClicked"
-            android:text="delete" />
+            android:text="x" />
 
     </LinearLayout>
 
