--- a/app/src/main/res/layout/food_list.xml
+++ b/app/src/main/res/layout/food_list.xml
@@ -14,7 +14,7 @@
 
             <Button
                 android:id="@+id/all_button"
-                android:layout_width="100dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="ALL"
@@ -22,7 +22,7 @@
 
             <Button
                 android:id="@+id/january_button"
-                android:layout_width="100dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="JANUARY"
@@ -30,7 +30,7 @@
 
             <Button
                 android:id="@+id/february_button"
-                android:layout_width="100dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="FEBRUARY"
@@ -38,7 +38,7 @@
 
             <Button
                 android:id="@+id/march_button"
-                android:layout_width="100dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="MARCH"
@@ -46,7 +46,7 @@
 
             <Button
                 android:id="@+id/april_button"
-                android:layout_width="100dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="APRIL"
@@ -54,7 +54,7 @@
 
             <Button
                 android:id="@+id/may_button"
-                android:layout_width="100dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="MAY"
@@ -62,11 +62,59 @@
 
             <Button
                 android:id="@+id/june_button"
-                android:layout_width="100dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="JUNE"
                 android:onClick="setJuneButtonClicked"/>
+
+            <Button
+                android:id="@+id/july_button"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="JULY"
+                android:onClick="setJulyButtonClicked"/>
+
+            <Button
+                android:id="@+id/august_button"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="AUGUST"
+                android:onClick="setAugustButtonClicked"/>
+
+            <Button
+                android:id="@+id/september_button"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="SEPTEMBER"
+                android:onClick="setSeptemberButtonClicked"/>
+
+            <Button
+                android:id="@+id/october_button"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="OCTOBER"
+                android:onClick="setOctoberButtonClicked"/>
+
+            <Button
+                android:id="@+id/november_button"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="NOVEMBER"
+                android:onClick="setNovemberButtonClicked"/>
+
+            <Button
+                android:id="@+id/december_button"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="DECEMBER"
+                android:onClick="setDecemberButtonClicked"/>
 
         </LinearLayout>
 
