--- a/app/src/main/res/layout/food_list.xml
+++ b/app/src/main/res/layout/food_list.xml
@@ -18,6 +18,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="ALL"
+                android:backgroundTint="#026470"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
                 android:onClick="setAllButtonClicked"/>
 
             <Button
@@ -26,6 +29,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="JANUARY"
+                android:backgroundTint="#026470"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
                 android:onClick="setJanuaryButtonClicked"/>
 
             <Button
@@ -34,6 +40,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="FEBRUARY"
+                android:backgroundTint="#026470"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
                 android:onClick="setFebruaryButtonClicked"/>
 
             <Button
@@ -42,6 +51,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="MARCH"
+                android:backgroundTint="#026470"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
                 android:onClick="setMarchButtonClicked"/>
 
             <Button
@@ -50,6 +62,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="APRIL"
+                android:backgroundTint="#026470"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
                 android:onClick="setAprilButtonClicked"/>
 
             <Button
@@ -58,6 +73,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="MAY"
+                android:backgroundTint="#026470"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
                 android:onClick="setMayButtonClicked"/>
 
             <Button
@@ -66,6 +84,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="JUNE"
+                android:backgroundTint="#026470"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
                 android:onClick="setJuneButtonClicked"/>
 
             <Button
@@ -74,6 +95,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="JULY"
+                android:backgroundTint="#026470"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
                 android:onClick="setJulyButtonClicked"/>
 
             <Button
@@ -82,6 +106,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="AUGUST"
+                android:backgroundTint="#026470"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
                 android:onClick="setAugustButtonClicked"/>
 
             <Button
@@ -90,6 +117,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="SEPTEMBER"
+                android:backgroundTint="#026470"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
                 android:onClick="setSeptemberButtonClicked"/>
 
             <Button
@@ -98,6 +128,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="OCTOBER"
+                android:backgroundTint="#026470"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
                 android:onClick="setOctoberButtonClicked"/>
 
             <Button
@@ -106,6 +139,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="NOVEMBER"
+                android:backgroundTint="#026470"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
                 android:onClick="setNovemberButtonClicked"/>
 
             <Button
@@ -114,6 +150,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="DECEMBER"
+                android:backgroundTint="#026470"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
                 android:onClick="setDecemberButtonClicked"/>
 
         </LinearLayout>
@@ -134,6 +173,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="new diary entry"
+        android:backgroundTint="#026470"
+        android:textSize="16sp"
+        android:textColor="#ffffff"
         android:onClick="setNewEntryButtonClicked"/>
 
 </LinearLayout>
