put months into hashmap

--- a/app/src/main/res/layout/food_list.xml
+++ b/app/src/main/res/layout/food_list.xml
@@ -32,7 +32,7 @@
                 android:backgroundTint="#026470"
                 android:textSize="16sp"
                 android:textColor="#ffffff"
-                android:onClick="setJanuaryButtonClicked"/>
+                android:onClick="setMonthButtonClicked"/>
 
             <Button
                 android:id="@+id/february_button"
